--- a/frontend/app/styles/background-colors.scss
+++ b/frontend/app/styles/background-colors.scss
@@ -1,6 +1,6 @@
 .bg-blue-one {
-  background-color: #238bca !important;
-  color: white !important;
+  background-color: #eaf1f7 !important;
+  color: #3b3c3e !important;
 }
 
 .bg-blue-two {
@@ -17,8 +17,8 @@ bg-white {
   background-color: white !important;
 }
 
-.bg-grey-1 {
-  background-color: #f5f5f5 !important;
+.bg-blue-1 {
+  background-color: #eaf1f7 !important;
 }
 
 .bg-grey-2 {
