--- a/frontend/app/styles/nav-bar.scss
+++ b/frontend/app/styles/nav-bar.scss
@@ -1,8 +1,6 @@
 .navbar-custom {
-  background: #238bca;
+  background: #1b8dc6;
   z-index: 998;
-  padding-left: 0px !important;
-  padding-right: 0px !important;
 }
 
 .navbar-icon {
