--- a/frontend/app/templates/components/team-show.hbs
+++ b/frontend/app/templates/components/team-show.hbs
@@ -4,46 +4,46 @@
 {{#if this.isTeamConfiguring}}
   <TeamMemberConfigure @teamId={{@team.id}} @onAbort={{this.toggleTeamConfigure}}/>
 {{/if}}
-<div class="mt-4 mb-4">
+<div class="mt-4 mb-4 ">
   <div>
-    <div class="row py-2 d-flex bg-white border border-darker {{if this.collapsed "rounded" "rounded-top"}}">
+    <div class="row py-2 d-flex team-card-header {{if this.collapsed "rounded" "rounded-top"}}">
       <div class="col-auto my-auto" role="button" {{on "click" this.collapse}}>
         {{#if this.args.team.private}}
           <img class="icon icon-big-button py-auto" src="/ember/assets/images/encrypted_small.svg" alt="">
 
         {{else}}
-          <img class="icon icon-big-button py-auto" src="/ember/assets/images/members.svg" alt="">
+          <img class="icon icon-big-button py-auto" src="/ember/assets/images/members_white.svg" alt="">
         {{/if}}
       </div>
       <div class="col my-auto pl-0" role="button" {{on "click" this.collapse}}>
-        <h2 class="d-inline">{{@team.name}}</h2>
+        <h3 class="d-inline">{{@team.name}}</h3>
       </div>
       <div class="col-auto my-auto">
         <span>
           <span class="mx-1" role="button" {{on "click" this.toggleTeamEdit}}>
-            <img class="icon-big-button" src="/ember/assets/images/edit.svg" alt="edit">
+            <img class="icon-big-button" src="/ember/assets/images/edit-white.svg" alt="edit">
           </span>
           <span class="mx-1" id="config_team_button" role="button" {{on "click" this.toggleTeamConfigure}}>
-            <img class="icon-big-button" src="/ember/assets/images/members.svg" alt="configure">
+            <img class="icon-big-button" src="/ember/assets/images/members_white.svg" alt="configure">
           </span>
           <span class="mx-1" role="button" {{on "click" this.toggleFavourised}}>
-            <img class="icon-big-button" src="/ember/assets/images/star{{if @team.favourised "-filled"}}.svg" alt="star">
+            <img class="icon-big-button" src="/ember/assets/images/star-white{{if @team.favourised "-filled"}}.svg" alt="star">
           </span>
         </span>
       </div>
       <div class="col-auto ml-0 pl-0 my-auto">
         <span role="button" {{on "click" this.collapse}}>
           {{#if this.collapsed}}
-            <img class="icon-big-button float-right" src="/ember/assets/images/angle-left.svg" alt="<">
+            <img class="icon-big-button float-right" src="/ember/assets/images/angle-left-white.svg" alt="<">
           {{else}}
-            <img class="icon-big-button float-right" src="/ember/assets/images/angle-down.svg" alt="v">
+            <img class="icon-big-button float-right" src="/ember/assets/images/angle-down-white.svg" alt="v">
           {{/if}}
         </span>
       </div>
     </div>
 
-    <BsCollapse class="row bg-grey-1 border border-darker border-top-0 rounded-bottom" @collapsed={{this.collapsed}}>
-      <div class="col">
+    <BsCollapse class="row bg-blue-1 border border-darker border-top-0 rounded-bottom" @collapsed={{this.collapsed}}>
+      <div class="col pl-4 pr-4 pb-2 list-folder-header">
 
         {{#if @folder.description}}
         <div class="row py-3">
@@ -53,7 +53,7 @@
         </div>
         {{/if}}
 
-        <div class="p-3">
+        <div class="pt-2">
           {{#if @team.folders}}
             {{#each @team.folders as |folder|}}
               <div class="row bg-white border py-2">
