--- a/frontend/app/templates/components/folder-show.hbs
+++ b/frontend/app/templates/components/folder-show.hbs
@@ -1,12 +1,12 @@
 {{#if this.isFolderEditing}}
   <FolderForm @folder={{@folder}} @onAbort={{this.toggleFolderEdit}} @title={{t "folders.edit.title"}}/>
 {{/if}}
-<div class="d-flex row  justify-content-between">
+<div class="d-flex row justify-content-between folder-show-header">
   <div class="col-auto my-auto" role="button" {{on "click" this.collapse}}>
-    <img class="icon icon-big-button py-auto" src="/ember/assets/images/folder.svg" alt="">
+    <img class="icon icon-folder py-auto" src="/ember/assets/images/folder.svg" alt="">
   </div>
   <div class="col pl-0" role="button" {{on "click" this.collapse}}>
-    <h4 class="d-inline">{{@folder.name}}</h4>
+    <h5 class="d-inline">{{@folder.name}}</h5>
   </div>
   <div class="col-sm-1 d-flex justify-content-between align-items-center">
     <DeleteWithConfirmation @record={{@folder}} @didDelete={{this.refreshRoute}}>
