--- a/app/webpacker/src/stylesheets/custom.scss
+++ b/app/webpacker/src/stylesheets/custom.scss
@@ -24,7 +24,6 @@ body {
 }
 
 .main {
-  margin-left: 250px;
   padding-bottom: 10px;
 }
 
@@ -201,4 +200,9 @@ body {
 
 #content {
   left: 250px;
+}
+
+.content {
+  width: 66.6%;
+  margin: 0 auto;
 }
