Style welcome page

--- a/frontend/app/templates/index.hbs
+++ b/frontend/app/templates/index.hbs
@@ -1,11 +1,8 @@
 <div class="container py-2">
   <div class="row py-2 bg-white border border-darker rounded my-4">
     <div class="col">
-      <h3>{{t "session.newuser.title"}}!</h3>
-
-      <p>{{t "select_team"}}</p>
-
-
+      <h3>{{t "hi_user"}} {{this.model}}!</h3>
+      <p>{{t "intro"}}</p>
     </div>
   </div>
 </div>
