--- a/frontend/app/styles/account-show.scss
+++ b/frontend/app/styles/account-show.scss
@@ -29,6 +29,13 @@
   display: block;
 }
 
+.show-password-link-sm {
+  width: 137px;
+  margin-top: 0px !important;
+  position: absolute;
+  top: 0px;
+}
+
 .result-username input:hover,
 .result-password input:hover {
   cursor: text;
