--- a/app/webpacker/src/stylesheets/navbar.scss
+++ b/app/webpacker/src/stylesheets/navbar.scss
@@ -54,7 +54,7 @@
 .back-link {
   min-width: 120px;
   margin-left: 238px;
-  padding: 15px 0px 15px 0 !important;
+  padding: 15px 0 15px 0 !important;
 }
 
 .username {
@@ -124,7 +124,7 @@
 
 .navbar {
   background: #106fac !important;
-  border-radius: 0px !important;
+  border-radius: 0 !important;
   border: none !important;
 }
 
