--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -255,3 +255,9 @@ li a {
 .description {
   overflow: auto;
 }
+
+
+.folder-no-p {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+}
