--- a/frontend/app/templates/components/footer.hbs
+++ b/frontend/app/templates/components/footer.hbs
@@ -3,7 +3,7 @@
     <div style="width: 250px;" class="float-left">
       <img src="/ember/assets/images/puzzle_classic_rgb.png" alt="logo" class="logo-icon mt-1">
     </div>
-    <div class="float-left">
+    <div class="float-left p-10">
       <a href="https://github.com/puzzle/cryptopus" target="_blank" rel="noopener">Cryptopus</a>
       |
       <a href="https://github.com/puzzle/cryptopus/wiki/User-manual" target="_blank" rel="noopener">{{t "help"}}</a>
