--- a/frontend/app/styles/footer.scss
+++ b/frontend/app/styles/footer.scss
@@ -4,7 +4,6 @@
   height: 50px;
   line-height: 50px;
   background-color: #f9f9f9;
-  width: 100%;
   border-top: 1px solid #cbc6c2;
   z-index: 9999;
   width: 100vw !important;
@@ -12,4 +11,8 @@
 
 .footer form {
   padding-right: 50px;
+}
+
+.p-10 {
+  padding-left: 18px !important;
 }
