--- a/frontend/app/templates/components/folder-show.hbs
+++ b/frontend/app/templates/components/folder-show.hbs
@@ -1,33 +1,35 @@
 {{#if this.isFolderEditing}}
   <FolderForm @folder={{@folder}} @onAbort={{this.toggleFolderEdit}} @title={{t "folders.edit.title"}}/>
 {{/if}}
-<div class="d-flex row justify-content-between folder-show-header">
-  <div class="col-auto my-auto" role="button" {{on "click" this.collapse}}>
-    <img class="icon icon-folder py-auto" src="/ember/assets/images/folder.svg" alt="">
-  </div>
-  <div class="col pl-0" role="button" {{on "click" this.collapse}}>
-    <h5 class="d-inline">{{@folder.name}}</h5>
-  </div>
-  <div class="col-sm-1 d-flex justify-content-between align-items-center">
+<div class="py-2 pl-2 pr-2 folder-card-header {{if this.collapsed "br-4"}}">
+  <div class="d-flex row justify-content-between folder-show-header">
+    <div class="col-auto my-auto" role="button" {{on "click" this.collapse}}>
+      <img class="icon icon-folder py-auto" src="/ember/assets/images/folder.svg" alt="">
+    </div>
+    <div class="col pl-0" role="button" {{on "click" this.collapse}}>
+      <h5 class="d-inline">{{@folder.name}}</h5>
+    </div>
+    <div class="col-sm-1 d-flex justify-content-between align-items-center">
     <DeleteWithConfirmation @record={{@folder}} @didDelete={{this.refreshRoute}}>
       <img class="icon-button d-inline my-auto" src="/ember/assets/images/delete.svg" alt="delete">
     </DeleteWithConfirmation>
-    <a role="button" {{on "click" this.toggleFolderEdit}}>
-        <img class="icon-medium-button " src="/ember/assets/images/edit.svg" alt="edit">
-    </a>
-  </div>
-  <div class="col-auto ml-0 pl-0 my-auto">
-    <span role="button" name="folder-collapse" {{on "click" this.collapse}}>
-      {{#if this.collapsed}}
-        <img class="icon-big-button float-right" src="/ember/assets/images/angle-left.svg" alt="<">
-      {{else}}
-        <img class="icon-big-button float-right" src="/ember/assets/images/angle-down.svg" alt="v">
-      {{/if}}
-    </span>
+      <a role="button" {{on "click" this.toggleFolderEdit}}>
+          <img class="icon-medium-button " src="/ember/assets/images/edit.svg" alt="edit">
+      </a>
+    </div>
+    <div class="col-auto ml-0 pl-0 my-auto">
+      <span role="button" name="folder-collapse" {{on "click" this.collapse}}>
+        {{#if this.collapsed}}
+          <img class="icon-big-button float-right" src="/ember/assets/images/angle-left.svg" alt="<">
+        {{else}}
+          <img class="icon-big-button float-right" src="/ember/assets/images/angle-down.svg" alt="v">
+        {{/if}}
+      </span>
+    </div>
   </div>
 </div>
 <BsCollapse  @collapsed={{this.collapsed}}>
-  <div class="">
+  <div class="folder-collapse-box">
 
     {{#if @folder.description}}
     <div class="row py-3">
@@ -40,12 +42,12 @@
     <div class="row d-flex flex-wrap">
       {{#if @folder.accounts}}
         {{#each @folder.accounts as |account|}}
-          <div class="p-3">
+          <div class="p-3 col-4">
             <AccountCardShow @account={{account}}/>
           </div>
         {{/each}}
       {{else}}
-        <div class="col">
+        <div class="col no-acc">
           <em>{{t "folders.no_accounts"}}</em>
         </div>
       {{/if}}
