--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -11,7 +11,7 @@
   @type="dark fixed-top"
   @backgroundColor="custom"
   @class="navbar-custom" as |navbar|>
-  <div class="pl-0 pr-0" style="width: 66.6%; margin: 0 auto">
+  <div class="pl-0 pr-0 nav-container">
     <navbar.content>
       <div style="width: 250px;">
         <a href="/">
@@ -21,8 +21,8 @@
       </div>
 
       <div class="form-inline">
-        <div class="form-group">
-          <Input @class="form-control mr-sm-2" style="margin-left: 10px !important;" @type="search" @id="search" @value={{ this.navService.searchQuery }} placeholder={{t "search.index.type_to_search"}} @keyUp={{this.searchByQuery}}  @autofocus={{this.isStartpage}}/>
+        <div class="form-group search-wrapper">
+          <Input @class="form-control mr-sm-2" @type="search" @id="search" @value={{ this.navService.searchQuery }} placeholder={{t "search.index.type_to_search"}} @keyUp={{this.searchByQuery}}  @autofocus={{this.isStartpage}}/>
         </div>
       </div>
 
