--- a/frontend/app/styles/background-colors.scss
+++ b/frontend/app/styles/background-colors.scss
@@ -9,7 +9,7 @@
 }
 
 .bg-blue-three {
-  background-color: #3b7bbe !important;
+  background-color: #1b8dc6 !important;
   color: white !important;
 }
 
