--- a/frontend/app/templates/components/folder-show.hbs
+++ b/frontend/app/templates/components/folder-show.hbs
@@ -11,7 +11,7 @@
     </div>
     <div class="col-sm-1 d-flex justify-content-between align-items-center">
     <DeleteWithConfirmation @record={{@folder}} @didDelete={{this.refreshRoute}}>
-      <img class="icon-button d-inline my-auto" src="/ember/assets/images/delete.svg" alt="delete">
+      <img class="icon-medium-button d-inline my-auto" src="/ember/assets/images/delete.svg" alt="delete">
     </DeleteWithConfirmation>
       <a role="button" {{on "click" this.toggleFolderEdit}}>
           <img class="icon-medium-button " src="/ember/assets/images/edit.svg" alt="edit">
