--- a/frontend/app/templates/components/side-nav-bar.hbs
+++ b/frontend/app/templates/components/side-nav-bar.hbs
@@ -17,11 +17,11 @@
           <div class="mb-5 d-flex flex-column">
             <div class="side-nav-bar-teams-list scroll-bar">
               {{#each this.navService.sortedTeams as |team|}}
-                <a {{on "click" (fn this.setSelectedTeam team)}} role="button" id="side-bar-team-{{team.id}}" class="list-group-item list-group-item-action bg-blue-one">
+                <a {{on "click" (fn this.setSelectedTeam team)}} role="button" id="side-bar-team-{{team.id}}" class="list-group-item list-group-item-action {{if (eq team this.navService.selectedTeam) "bg-blue-three" "bg-blue-one"}} ">
                   {{#if team.private}}
                     <img class="icon icon-button mr-2" src="/ember/assets/images/encrypted_small-blue.svg" alt="">
                   {{else}}
-                    <img class="icon icon-button mr-2" src="/ember/assets/images/members_blue.svg" alt="">
+                    <img class="icon icon-button mr-2" src="/ember/assets/images/members.svg" alt="">
                   {{/if}}
                   {{truncate team.name 13}}
                   {{#if (not team.folders)}}
