--- a/frontend/app/styles/account-card-show.scss
+++ b/frontend/app/styles/account-card-show.scss
@@ -4,19 +4,15 @@
 }
 
 .account-card {
-  width: 240px;
   max-height: 16em;
 }
 
 .account-card .account-accountname {
-  height: 6em;
+  /*height: 6em;*/
 }
 
-.account-card .account-accountname {
-  height: 6em;
-}
 .account-card .account-description {
-  height: 4em;
+  height: 3em;
   overflow: hidden;
 }
 
@@ -37,10 +33,21 @@
   height: 35px;
 }
 
-.account-detail .copy-btn {
+.account-detail .password-wrapper {
+  position: absolute;
+}
+
+.copy-btn {
   height: 35px;
+  width: 45px;
+  border: 1px solid #c9c9c9;
 }
 
 .account-detail-key {
   width: 20%;
+}
+
+.card-description {
+  overflow: hidden;
+  height: 1.5em;
 }
