--- a/app/webpacker/src/stylesheets/custom.scss
+++ b/app/webpacker/src/stylesheets/custom.scss
@@ -24,7 +24,6 @@ body {
 }
 
 .main {
-  margin-left: 250px;
   padding-bottom: 10px;
 }
 
@@ -39,6 +38,7 @@ body {
 .alert {
   width: 500px;
   margin: auto;
+  margin-top: 10px;
 }
 
 /*Icons*/
@@ -201,4 +201,9 @@ body {
 
 #content {
   left: 250px;
+}
+
+.content {
+  width: 66.6%;
+  margin: 0 auto;
 }
