--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -17,10 +17,7 @@ $navbar-dark-brand-hover-color: $navbar-dark-brand-color;
 @import "password-strength-meter";
 @import "folder-show";
 @import "power-select";
-
-.main {
-  margin-left: 250px;
-}
+@import "background-colors";
 
 .d-inline {
   display: inline !important;
@@ -84,6 +81,9 @@ $navbar-dark-brand-hover-color: $navbar-dark-brand-color;
 
 .w-20 {
   width: 20% !important;
+}
+.w-30 {
+  width: 30% !important;
 }
 
 .columns li.ember-power-select-option {
@@ -154,14 +154,47 @@ li a {
   display: inline;
 }
 
+.icon-medium-button {
+  width: 24px !important;
+  height: 24px !important;
+  display: inline;
+}
+
 .ml-254 {
   margin-left: 254px !important;
+}
+.ml-238 {
+  margin-left: 238px !important;
+}
+.mt-60 {
+  margin-top: 54px !important;
+}
+
+.default_button {
+  padding: 6px;
+  border: 1px solid #c9c9c9;
+  width: 45px;
+  background-color: #ebe3df;
+  margin-left: 6px;
 }
 
 .icon-button {
   width: 18px !important;
   height: 18px !important;
   display: inline;
+}
+
+.icon-folder {
+  width: 22px !important;
+  height: 22px !important;
+  display: inline;
+}
+
+.icon-button-angle {
+  width: 18px !important;
+  height: 18px !important;
+  display: inline;
+  margin-top: 4px;
 }
 
 .info-icon:hover {
@@ -185,24 +218,16 @@ li a {
   margin-bottom: 15px !important;
 }
 
-.bg-blue-one {
-  background-color: #238bca !important;
-  color: white !important;
+.border-darker {
+  border-color: #b1b4b8 !important;
 }
 
-.bg-blue-two {
-  background-color: #1e5a96 !important;
+.team-card-header {
+  height: 47.5px !important;
+  padding-top: 5px !important;
+  background-color: #1b8dc6;
   color: white !important;
-}
-
-.bg-blue-three {
-  background-color: #3b7bbe !important;
-  color: white !important;
-}
-
-.bg-header {
-  background-color: #d1d1d1 !important;
-  border-color: #b8b8b8 !important;
+  border: none;
 }
 
 .ember-notify-default.ember-notify-cn {
@@ -225,4 +250,13 @@ li a {
 
 .p-15 {
   padding: 15px 15px 15px 15px !important;
+}
+
+.description {
+  overflow: auto;
+}
+
+.folder-no-p {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
 }
