--- a/frontend/app/styles/folder-show.scss
+++ b/frontend/app/styles/folder-show.scss
@@ -1,15 +1,32 @@
-
-.folder-divider {
-}
-
 .folder-header {
   font-weight: bold;
   font-size: 18px !important;
   color: #238bca;
 }
 
-.folder-edit-icon {
-  /* filter for #238bca color, used https://codepen.io/sosuke/pen/Pjoqqp to generate */
-  filter: invert(42%) sepia(69%) saturate(780%) hue-rotate(164deg)
-  brightness(95%) contrast(84%);
+.folder-show-header:first-child {
+  border-radius: 4px 4px 0 0;
 }
+
+.folder-collapse-box {
+  background-color: #ffffff;
+  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: 4px;
+  padding: 0 15px 0 15px;
+}
+
+.folder-card-header {
+  background-color: #c7d9e9;
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+
+.br-4 {
+  border-radius: 4px!important;
+}
+
+.no-acc {
+  margin-bottom: 8px;
+  margin-top: 4px;
+}
+
