--- a/frontend/app/templates/components/account-card-show.hbs
+++ b/frontend/app/templates/components/account-card-show.hbs
@@ -4,24 +4,26 @@
 {{#if this.isPreview}}
   <div class="card account-card account-preview" {{on "click" this.swapToCredentialsView}} role="button">
     <div class="card-body account-accountname">
+      <img class="img d-inline w-30 float-left icon-folder mr-2" src="/ember/assets/images/key.svg" alt="key">
       <div class="card-title">
-        <img class="img d-inline w-20 float-right" src="/ember/assets/images/key.svg" alt="key">
-        <h5>{{truncate @account.accountname 18}}</h5>
+        <h5>{{@account.accountname}}</h5>
       </div>
     </div>
     <div class="card-footer text-muted account-description">
-      {{truncate @account.description 40}}
+      <div class="card-description">{{@account.description}}</div>
     </div>
   </div>
 {{else}}
   <div class="card account-card account-detail">
     <div role="button" class="card-header" {{on "click" this.swapToPreview}}>
-      <p class="d-inline">{{truncate @account.accountname 29}}</p>
+      <img class="img d-inline mr-2 icon-button" src="/ember/assets/images/key.svg" alt="key">
+
+      <p class="d-inline">{{@account.accountname}}</p>
     </div>
     <div class="card-body">
       <div class="row mb-2">
         <div class="col-sm-8 pr-0">
-          <Input class="secret" @disabled="true" @value={{@account.cleartextUsername}}/>
+          <Input class="d-inline form-control" @disabled="true" @value={{@account.cleartextUsername}}/>
         </div>
         <div class="col-sm-3">
           <CopyButton class="btn btn-light" @clipboardText={{@account.cleartextUsername}} @success={{fn this.onCopied "username"}}>
@@ -31,13 +33,18 @@
       </div>
       <div class="row">
         <div class="col-sm-8 pr-0">
-          <Input class="secret" @disabled="true" @value={{@account.cleartextPassword}}/>
+          <div class="password-wrapper">
+            <Input class="d-inline form-control" @disabled="true" @value={{@account.cleartextPassword}}/>
+            <div role="button" class="show-password-link show-password-link-sm {{if this.isPasswordVisible "visibility-hidden"}}" {{on "click" this.showPassword}} href="#">{{t "accounts.show.show_password"}}</div>
+          </div>
+
         </div>
         <div class="col-sm-3">
-          <CopyButton class="btn btn-light" @clipboardText={{@account.cleartextPassword}} @success={{fn this.onCopied "password"}}>
+          <CopyButton class="btn btn-light copy-btn" @clipboardText={{@account.cleartextPassword}} @success={{fn this.onCopied "password"}}>
             <img class="icon-clippy img d-inline" src="/ember/assets/images/clipboard.svg" alt="clip">
           </CopyButton>
         </div>
+
       </div>
     </div>
     <div class="card-footer d-flex justify-content-between">
