--- a/frontend/app/templates/components/footer.hbs
+++ b/frontend/app/templates/components/footer.hbs
@@ -1,6 +1,11 @@
 <div class="footer">
-  <div class="container">
-    <div class="float-left">
+  <div style="width: 66.6%; margin: 0 auto">
+    <div style="width: 250px;" class="float-left">
+      <a href="https://www.puzzle.ch" target="_blank">
+        <img src="/ember/assets/images/puzzle_classic_rgb.png" alt="logo" class="logo-icon mt-1">
+      </a>
+    </div>
+    <div class="float-left p-10">
       <a href="https://github.com/puzzle/cryptopus" target="_blank" rel="noopener">Cryptopus</a>
       |
       <a href="https://github.com/puzzle/cryptopus/wiki/User-manual" target="_blank" rel="noopener">{{t "help"}}</a>
@@ -9,7 +14,8 @@
     </div>
     <div class="float-right w-50 d-flex align-items-center justify-content-end">
       <div class="col-sm-4 d-inline-block">
-        <PowerSelect @options={{this.availableLocales}} @selected={{this.selectedLocale}} @onChange={{this.setLocale}} @verticalPosition="above" @renderInPlace={{true}} as |locale|>
+        <PowerSelect @options={{this.availableLocales}} @selected={{this.selectedLocale}} @onChange={{this.setLocale}}
+                     @verticalPosition="above" @renderInPlace={{true}} as |locale|>
           {{locale.name}}
         </PowerSelect>
       </div>
