--- a/frontend/app/templates/components/team-show.hbs
+++ b/frontend/app/templates/components/team-show.hbs
@@ -4,50 +4,61 @@
 {{#if this.isTeamConfiguring}}
   <TeamMemberConfigure @teamId={{@team.id}} @onAbort={{this.toggleTeamConfigure}}/>
 {{/if}}
-<div class="container mb-4 ml-254">
+<div class="mt-4 mb-4" style="border-radius: 4px">
   <div>
-    <div class="row py-2 d-flex border {{if this.collapsed "rounded" "rounded-top"}}">
-      <div class="col" role="button" {{on "click" this.collapse}}>
-        <h2 class="d-inline">{{@team.name}}</h2>
+    <div class="row py-2 d-flex team-card-header {{if this.collapsed "rounded" "rounded-top"}}">
+      <div class="col-auto my-auto" role="button" {{on "click" this.collapse}}>
+        {{#if this.args.team.private}}
+          <img class="icon icon-big-button py-auto" src="/ember/assets/images/encrypted_small.svg" alt="">
+
+        {{else}}
+          <img class="icon icon-big-button py-auto" src="/ember/assets/images/members-white.svg" alt="">
+        {{/if}}
+      </div>
+      <div class="col my-auto pl-0" role="button" {{on "click" this.collapse}}>
+        <h3 class="d-inline">{{@team.name}}</h3>
       </div>
       <div class="col-sm-2 d-flex justify-content-between align-items-center">
         <DeleteWithConfirmation @record={{@team}} @didDelete={{this.transitionToIndex}}>
-          <img class="icon-big-button" src="/ember/assets/images/delete.svg" alt="delete">
+          <img class="icon-big-button" src="/ember/assets/images/delete-white.svg" alt="delete">
         </DeleteWithConfirmation>
-        <span role="button" {{on "click" this.toggleTeamEdit}}>
-          <img class="icon-big-button" src="/ember/assets/images/edit.svg" alt="edit">
+        <span class="mx-1" role="button" {{on "click" this.toggleTeamEdit}}>
+          <img class="icon-big-button" src="/ember/assets/images/edit-white.svg" alt="edit">
         </span>
-        <span id="config_team_button" role="button" {{on "click" this.toggleTeamConfigure}}>
-          <img class="icon-big-button" src="/ember/assets/images/members.svg" alt="configure">
+        <span class="mx-1" id="config_team_button" role="button" {{on "click" this.toggleTeamConfigure}}>
+          <img class="icon-big-button" src="/ember/assets/images/members-white.svg" alt="configure">
         </span>
-        <span role="button" {{on "click" this.toggleFavourised}}>
-          <img class="icon-big-button" src="/ember/assets/images/star{{if @team.favourised "-filled"}}.svg" alt="star">
+        <span class="mx-1" role="button" {{on "click" this.toggleFavourised}}>
+          <img class="icon-big-button" src="/ember/assets/images/star-white{{if @team.favourised "-filled"}}.svg" alt="star">
         </span>
       </div>
       <div class="col-auto ml-0 pl-0 my-auto">
         <span role="button" name="team-collapse" {{on "click" this.collapse}}>
           {{#if this.collapsed}}
-            <img class="icon-big-button float-right" src="/ember/assets/images/angle-left.svg" alt="<">
+            <img class="icon-big-button float-right" src="/ember/assets/images/angle-left-white.svg" alt="<">
           {{else}}
-            <img class="icon-big-button float-right" src="/ember/assets/images/angle-down.svg" alt="v">
+            <img class="icon-big-button float-right" src="/ember/assets/images/angle-down-white.svg" alt="v">
           {{/if}}
         </span>
       </div>
-      <hr>
     </div>
 
-    <BsCollapse class="row border border-top-0 rounded-bottom" @collapsed={{this.collapsed}}>
-      <div class="col">
-        <div class="row py-2">
+    <BsCollapse class="row bg-blue-1 border border-darker border-top-0 rounded-bottom" @collapsed={{this.collapsed}}>
+      <div class="col pl-4 pr-4 pb-2 list-folder-header">
+
+        {{#if @folder.description}}
+        <div class="row py-3">
           <div class="col">
-            <p class="text-muted">{{@team.description}}</p>
+            <p class="text-muted description mb-0">{{@team.description}}</p>
           </div>
         </div>
-        <div class="p-2">
+        {{/if}}
+
+        <div class="pt-2">
           {{#if @team.folders}}
             {{#each @team.folders as |folder|}}
-              <div class="row border py-2">
-                <div class="col">
+              <div class="row bg-white border" style="margin-bottom: 5px; border-radius: 4px;">
+                <div class="col folder-no-p">
                   <FolderShow @folder={{folder}}/>
                 </div>
               </div>
