Fix lint errors

--- a/frontend/app/templates/application.hbs
+++ b/frontend/app/templates/application.hbs
@@ -1,9 +1,9 @@
 <EmberNotify @messageStyle="bootstrap"@closeAfter={{4000}}/>
 <NavBar/>
 
-<div style="width: 66.6%; margin: 0 auto">
+<div class="content">
   <SideNavBar/>
-  <div class="mb-5 mt-60 ml-254" role="main" style="margin-left: 270px !important;">
+  <div class="mb-5 mt-60 ml-270px" role="main" >
     {{outlet}}
   </div>
 </div>
