--- a/frontend/app/templates/components/footer.hbs
+++ b/frontend/app/templates/components/footer.hbs
@@ -1,7 +1,7 @@
 <div class="footer">
-  <div style="width: 66.6%; margin: 0 auto">
-    <div style="width: 250px;" class="float-left">
-      <a href="https://www.puzzle.ch" target="_blank">
+  <div class="content">
+    <div class="w-250 float-left">
+      <a href="https://www.puzzle.ch" target="_blank" rel="noopener">
         <img src="/ember/assets/images/puzzle_classic_rgb.png" alt="logo" class="logo-icon mt-1">
       </a>
     </div>
