--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -13,7 +13,7 @@
   @class="navbar-custom" as |navbar|>
   <div class="pl-0 pr-0 nav-container">
     <navbar.content>
-      <div style="width: 250px;">
+      <div class="w-250">
         <a href="/">
           <img src="/ember/assets/images/cryptopussy_without_text.svg" alt="logo" class="logo-icon">
           <span class="ml-1 navbar-brand">Cryptopus</span>
