--- a/frontend/app/templates/components/side-nav-bar.hbs
+++ b/frontend/app/templates/components/side-nav-bar.hbs
@@ -1,4 +1,4 @@
-<div id="sidebar" style="float: left; margin-bottom: -50px !important;">
+<div id="sidebar">
   <nav class="nav-side-bar navbar navbar-dark navbar-inverse p-0">
     <div class="navbar-collapse p-0" id="nav-side-bar-container" {{did-insert this.setupModal this}}>
       <div class="list-group list-group-root">
