--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -19,6 +19,15 @@ $navbar-dark-brand-hover-color: $navbar-dark-brand-color;
 @import "power-select";
 @import "background-colors";
 
+.content {
+  width: 66.6%;
+  margin: 0 auto;
+}
+
+.w-250 {
+  width: 250px;
+}
+
 .d-inline {
   display: inline !important;
 }
@@ -65,6 +74,10 @@ $navbar-dark-brand-hover-color: $navbar-dark-brand-color;
   margin-left: 5%;
 }
 
+.ml-270px {
+  margin-left: 270px !important;
+}
+
 .mb-2 {
   margin-bottom: 2%;
 }
@@ -73,6 +86,9 @@ $navbar-dark-brand-hover-color: $navbar-dark-brand-color;
 }
 .mb-10 {
   margin-bottom: 10px;
+}
+.mb-5 {
+  margin-bottom: 5px;
 }
 
 .w-4 {
@@ -110,6 +126,24 @@ li a {
   margin-left: 5%;
 }
 
+.mt-32 {
+  margin-top: 32px;
+}
+
+.ml-15 {
+  margin-left: 15px;
+}
+
+.ml-254 {
+  margin-left: 254px !important;
+}
+.ml-238 {
+  margin-left: 238px !important;
+}
+.mt-60 {
+  margin-top: 54px !important;
+}
+
 /* Validation-errors */
 .validation-errors {
   width: 100%;
@@ -131,14 +165,6 @@ li a {
   border: 1px solid red !important;
 }
 
-.mt-32 {
-  margin-top: 32px;
-}
-
-.ml-15 {
-  margin-left: 15px;
-}
-
 .ember-power-select-trigger {
   height: 38px;
   line-height: 2.1;
@@ -158,16 +184,6 @@ li a {
   width: 24px !important;
   height: 24px !important;
   display: inline;
-}
-
-.ml-254 {
-  margin-left: 254px !important;
-}
-.ml-238 {
-  margin-left: 238px !important;
-}
-.mt-60 {
-  margin-top: 54px !important;
 }
 
 .default_button {
@@ -259,4 +275,8 @@ li a {
 .folder-no-p {
   padding-left: 0 !important;
   padding-right: 0 !important;
+}
+
+.border-radius-4 {
+  border-radius: 4px
 }
