fix tests and add missing icons

--- a/frontend/app/templates/components/team-show.hbs
+++ b/frontend/app/templates/components/team-show.hbs
@@ -45,7 +45,7 @@
 
     <BsCollapse class="row bg-blue-1 border border-darker border-top-0 rounded-bottom" @collapsed={{this.collapsed}}>
       <div class="col pl-4 pr-4 pb-2 list-folder-header">
-        {{#if @folder.description}}
+        {{#if @team.description}}
           <div class="row py-3">
             <div class="col">
               <p class="text-muted description mb-0">{{@team.description}}</p>
