--- a/frontend/app/styles/folder-show.scss
+++ b/frontend/app/styles/folder-show.scss
@@ -30,3 +30,10 @@
   margin-top: 4px;
 }
 
+.reduced-padding-for-icons {
+  padding-right: 2px !important;
+}
+
+.margin-for-buttons {
+  margin-left: 4px !important;
+}
