--- a/frontend/app/templates/components/delete-with-confirmation.hbs
+++ b/frontend/app/templates/components/delete-with-confirmation.hbs
@@ -3,7 +3,7 @@
 </span>
 
 <BsModal @size="sm" @renderInPlace="true" @onHide={{this.toggleModal}} @open={{this.isOpen}} as |Modal|>
-  <Modal.body>
+  <Modal.body class="text-dark">
     {{t "confirmation"}}
   </Modal.body>
   <Modal.footer>
