--- a/frontend/app/styles/app.scss
+++ b/frontend/app/styles/app.scss
@@ -122,6 +122,10 @@ li a {
   height: 40px;
 }
 
+.puzzle-icon {
+  height: 35px;
+}
+
 .ml-5 {
   margin-left: 5%;
 }
@@ -279,4 +283,15 @@ li a {
 
 .border-radius-4 {
   border-radius: 4px
+}
+
+#locale-dropdown > div {
+  width: 120px;
+  border: none !important;
+  color: #727679;
+  background-color: #eaf1f7;
+}
+
+.pl-none {
+  padding-left: 0 !important;
 }
