--- a/frontend/app/templates/components/folder-show.hbs
+++ b/frontend/app/templates/components/folder-show.hbs
@@ -9,11 +9,11 @@
     <div class="col pl-0" role="button" {{on "click" this.collapse}}>
       <h5 class="d-inline">{{@folder.name}}</h5>
     </div>
-    <div class="col-sm-1 d-flex justify-content-between align-items-center">
+    <div class="d-flex justify-content-between align-items-center reduced-padding-for-icons">
       <DeleteWithConfirmation @record={{@folder}} @didDelete={{this.refreshRoute}}>
         <img class="icon-medium-button d-inline my-auto" src="/ember/assets/images/delete.svg" alt="delete">
       </DeleteWithConfirmation>
-      <a role="button" {{on "click" this.toggleFolderEdit}}>
+      <a class="margin-for-buttons" role="button" {{on "click" this.toggleFolderEdit}}>
         <img class="icon-medium-button " src="/ember/assets/images/edit.svg" alt="edit">
       </a>
     </div>
