fix styling after rebase

--- a/frontend/app/templates/components/footer.hbs
+++ b/frontend/app/templates/components/footer.hbs
@@ -3,7 +3,7 @@
     <div class="w-250 float-left">
       <a href="https://www.puzzle.ch" target="_blank" rel="noopener">
         <span class="helper"></span>
-        <img src="/ember/assets/images/puzzle_classic_rgb.png" alt="logo" class="logo-icon mt-1">
+        <img src="/ember/assets/images/puzzle_classic_rgb.png" alt="logo" class="puzzle-icon">
       </a>
     </div>
     <div class="float-left p-10">
