--- a/frontend/app/templates/components/team-show.hbs
+++ b/frontend/app/templates/components/team-show.hbs
@@ -55,7 +55,7 @@
         <div class="pt-2">
           {{#if @team.folders}}
             {{#each @team.folders as |folder|}}
-              <div class="row bg-white border border-radius-4 mb-5">
+              <div class="row bg-white border border-radius-4 mb-5-folder">
                 <div class="col folder-no-p">
                   <FolderShow @folder={{folder}}/>
                 </div>
